# snyk-poetry-lockfile-parser

./: package.json
lib/: index.ts
lib/parsers/: v1Parser.ts  v2Parser.ts
test/fixtures/poetry-with-groups/: pyproject.toml
test/unit/lib/: poetry-groups.test.ts
