[tool.poetry]
name = "poetry-with-groups"
version = "0.1.0"
description = "Example project with Poetry groups"
authors = ["Example <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.1.0"

[tool.poetry.group.ml.dependencies]
numpy = "^1.24.3"
pandas = "^2.0.1"

[tool.poetry.group.torch.dependencies]
torch = "^2.0.0"
torchvision = "^0.15.1"